# django-polymorphic

./: .bandit  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.md  AUTHORS.rst  CHANGES.html  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.html  DOCS.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.html  README.md  README.rst  SECURITY.md  codecov.yml  conftest.py  dbreset  diffmanagement  hatch_build.py  index.html  justfile  manage.py  mypy.ini  polymorphic_test_settings.py  pyproject.toml  rst-to-html.py  rst.css  runtests.py  settings.py  setup.cfg  setup.py  (+5 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bandit.yml  ci.yml  lint.yml  lint_python.yml  release.yml  scorecard.yml  security.yml  test.yml  unit_tests.yml  update_coc.yml  zizmor.yml
docs/: Makefile  admin.rst  advanced.rst  changelog.rst  changelog_archive.rst  conf.py  contributing.rst  deletion.rst  formsets.rst  index.rst  integrations.rst  make.bat  managers.rst  migrating.rst  performance.rst  proxy.rst  quickstart.rst  rest_framework.rst  rest_framework_history.rst  third-party.rst  typing.rst  views.rst
docs/_ext/djangodummy/: requirements.txt  settings.py
docs/_ext/djangoext/: docstrings.py  roles.py
docs/_static/: style.css
docs/api/: index.rst  polymorphic.admin.rst  polymorphic.contrib.extra_views.rst  polymorphic.contrib.guardian.rst  polymorphic.deletion.rst  polymorphic.formsets.rst  polymorphic.managers.rst  polymorphic.models.rst  polymorphic.query.rst  polymorphic.showfields.rst  polymorphic.templatetags.rst  polymorphic.utils.rst
docs/api/polymorphic.contrib/: drf.rst  extra_views.rst  guardian.rst  index.rst
docs/api/polymorphic.templatetags/: index.rst  polymorphic_admin_tags.rst  polymorphic_formset_tags.rst
docs/changelog/: drf.rst  index.rst
docs/integrations/: djangorestframework.rst  drf.rst  index.rst
example/: manage.py
example/api_example/: serializers.py  urls.py  views.py
example/api_example/migrations/: 0001_initial.py
example/example/: settings.py  urls.py  wsgi.py
example/orders/: admin.py  models.py
example/orders/migrations/: 0001_initial.py
example/pexp/: admin.py  dumpdata_test_correct_output.txt  models.py
example/pexp/management/commands/: p2cmd.py  pcmd.py  polybench.py  polymorphic_create_test_data.py
example/pexp/migrations/: 0001_initial.py  0002_modelc_field4.py
example/projects/migrations/: 0001_initial.py
pexp/: dumpdata_test_correct_output.txt  models.py  tests.py
pexp/management/commands/: p2cmd.py  pcmd.py  polybench.py  polymorphic_create_test_data.py
poly/: models.py  polymorphic.py  tests.py
poly/management/commands/: polycmd.py  polymorphic_dumpdata.py  polymorphic_dumpdata_11.py  polymorphic_dumpdata_12.py
polymorphic/: __init__.py  __version__.py  admin.py  base.py  compat.py  compatibility_tools.py  manager.py  managers.py  models.py  polymorphic.py  polymorphic_model.py  query.py  query_translate.py  showfields.py  test_tools.py  tests.py  tools_for_tests.py  utils.py
polymorphic/admin/: __init__.py  childadmin.py  filters.py  forms.py  generic.py  helpers.py  inlines.py  parentadmin.py
polymorphic/contrib/: extra_views.py  guardian.py
polymorphic/formsets/: __init__.py  generic.py  models.py  utils.py
polymorphic/locale/en/LC_MESSAGES/: django.mo  django.po
polymorphic/locale/fr/LC_MESSAGES/: django.mo  django.po
polymorphic/management/commands/: polymorphic_dumpdata.py  polymorphic_dumpdata_11.py  polymorphic_dumpdata_12.py
polymorphic/static/polymorphic/css/: polymorphic_inlines.css
polymorphic/static/polymorphic/js/: jquery.django-inlines.js  polymorphic_inlines.js
polymorphic/templates/admin/polymorphic/: add_type_form.html  (+4 more)
polymorphic/templates/reversion/: change_list.html
polymorphic/templatetags/: __init__.py  polymorphic_admin_tags.py  polymorphic_formset_tags.py
polymorphic/tests/: __init__.py  admintestcase.py  fields.py  models.py  showfields.py  test_admin.py  test_contrib.py  test_multidb.py  test_orm.py  test_polymorphic.py  test_query.py  test_query_translate.py  test_regression.py  test_unique_ids.py  test_utils.py
polymorphic/tests/migrations/: 0001_initial.py  0002_auto_20190611_1413.py  0002_blueheadduck_delete_inlinemodelbase_and_more.py
requirements/: packaging.txt  testing.txt
rest_polymorphic/: __version__.py  serializers.py
src/polymorphic/: __init__.py  __init__.pyi  apps.py  apps.pyi  base.py  base.pyi  deletion.py  managers.py  managers.pyi  models.py  models.pyi  query.py  query.pyi  query_translate.py  query_translate.pyi  related_descriptors.py  showfields.py  showfields.pyi  utils.py  utils.pyi
src/polymorphic/admin/: __init__.py  __init__.pyi  childadmin.py  childadmin.pyi  filters.py  filters.pyi  forms.py  forms.pyi  generic.py  generic.pyi  helpers.py  helpers.pyi  inlines.py  inlines.pyi  parentadmin.py  parentadmin.pyi  widgets.py
src/polymorphic/contrib/: extra_views.py  extra_views.pyi  guardian.py  guardian.pyi
src/polymorphic/formsets/: __init__.pyi  generic.py  generic.pyi  models.py  models.pyi  utils.py  utils.pyi
src/polymorphic/templatetags/: __init__.py  polymorphic_admin_tags.py  polymorphic_admin_tags.pyi  polymorphic_formset_tags.py  polymorphic_formset_tags.pyi
src/polymorphic/tests/: __init__.py  __init__.pyi  admin.py  admin.pyi  admintestcase.py  admintestcase.pyi  conftest.py  debug.py  debug.pyi  models.py  models.pyi  pyright.test.json  settings.py  settings.pyi  test_admin.py  test_admin.pyi  test_base.py  test_contrib.pyi  test_fieldset_merging.py  test_formsets.py  test_inheritance.py  test_inheritance.pyi  test_migration_managers.py  test_missing_coverage.py  test_multidb.py  test_multidb.pyi  test_orm.py  test_orm.pyi  test_performance.py  test_query_translate.py  test_query_translate.pyi  test_raw_id_widget.py  test_recasting.py  test_regression.py  test_regression.pyi  test_serialization.py  test_signals.py  test_templatetags.py  test_type_hints.py  test_utils.py  (+4 more)
tests/: models.py  serializers.py  settings.py  test_serializers.py
(+112 files in other folders)
