[metadata]
name = django-polymorphic
version = 1.3
description = Seamless polymorphic inheritance for Django models
long_description = file:README.rst
author = Bert Constantin
author_email = bert.constantin@gmx.de
maintainer = Christopher Glass
maintainer_email = tribaal@gmail.com
url = https://github.com/django-polymorphic/django-polymorphic
download_url = https://github.com/django-polymorphic/django-polymorphic/tarball/master
keywords = django, polymorphic
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 1.10
	Framework :: Django :: 1.11
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Database

[options]
packages = find:
include_package_data = True
install_requires =
	Django >= 1.10

[options.packages.find]
exclude =
	polymorphic.tests

[bdist_wheel]
universal = 1
