[metadata]
name = django-polymorphic
version = 3.0.0
description = Seamless polymorphic inheritance for Django models
long_description = file:README.rst
author = Bert Constantin
author_email = bert.constantin@gmx.de
maintainer = Christopher Glass
maintainer_email = tribaal@ubuntu.com
url = https://github.com/django-polymorphic/django-polymorphic
download_url = https://github.com/django-polymorphic/django-polymorphic/tarball/master
keywords = django, polymorphic
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.1
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Database

[options]
packages = find:
include_package_data = True
install_requires =
	Django >= 2.1

[options.packages.find]
exclude =
	polymorphic.tests

[bdist_wheel]
universal = 1
