[metadata]
name = django-polymorphic
version = attr: polymorphic.VERSION
description = Seamless polymorphic inheritance for Django models
long_description = file:README.rst
author = Bert Constantin
author_email = bert.constantin@gmx.de
maintainer = Christopher Glass
maintainer_email = tribaal@ubuntu.com
url = https://github.com/jazzband/django-polymorphic
download_url = https://github.com/jazzband/django-polymorphic/tarball/master
keywords = django, polymorphic
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 3.2
	Framework :: Django :: 4.0
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
	Framework :: Django :: 5.0
	Framework :: Django :: 5.1
	Framework :: Django :: 5.2
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13
	Topic :: Database

[options]
packages = find:
include_package_data = True
install_requires =
	Django >= 3.2

[options.packages.find]
exclude =
	polymorphic.tests
	polymorphic.tests.*
	polymorphic/tests
